<resources>
    <string name="app_name">Aquamizer</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">AQUAMIZER</string>

    <!-- NAVIGATION DRAWER MENU   -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">Quem somos</string>
    <string name="menu_create_timer">Cadastrar alarme</string>
    <string name="menu_timer_list">Alarmes</string>
    <string name="menu_tips">Dicas para economizar água</string>

    <!-- MULTISELECT TIPS -->
    <string name="select_kitchen">Cozinha</string>
    <string name="select_bathroom">Banheiro</string>
    <string name="select_garden">Jardim</string>
    <string name="select_laundry">Lavanderia</string>
    <string name="select_any">Nenhum</string>

    <!-- ABOUT -->
    <string name="about_us_content">
        Somos uma startup preocupada com a sustentabilidade ambiental e econômica dos brasileiros.
        \n\nEstamos aqui para te ajudar no gerencimaneto dos seus gastos e da sua conta de água de forma simples e eficiente. Conte conosco!
    </string>
    <string name="app_authors">
        Aplicativo planejado e desenvolvido por Carolina Arenas, Clara Rosa, Lui Franco, Luís Eduardo e Raphael Medeiros como parte da disciplina de Empreendedores em Informática da Universidade de São Paulo
    </string>

    <!-- CREATE TIMER -->
    <string name="timer_name">Título do alarme</string>
    <string name="timer_time">Tempo do alarme</string>
    <string name="save">Salvar</string>
</resources>