<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_timer_list"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_timer_list"/>
        <item
            android:id="@+id/nav_create_timer"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_create_timer"
            />

        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_tips"
            />

    </group>
</menu>